clusters/hive/apps/mealie/k8s-manifests/mealie-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    k8s-app: mealie
  namespace: mealie
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: mealie
  template:
    metadata:
      labels:
        k8s-app: mealie
    spec:
      containers:
        - image: ghcr.io/mealie-recipes/mealie:v3.27.0
          imagePullPolicy: Always
          name: mealie
          resources:
            requests:
              cpu: 50m
              memory: 400Mi
            limits:
              memory: 600Mi
          volumeMounts:
            - mountPath: /app/data
              name: mealie
      volumes:
        - name: mealie
          persistentVolumeClaim:
            claimName: mealie
