clusters/hive/apps/mealie/k8s-manifests/mealie-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: mealie
  name: mealie
  namespace: mealie
spec:
  ports:
    - name: mealie
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    k8s-app: mealie
  sessionAffinity: None
  type: ClusterIP
