clusters/hive/apps/mealie/k8s-manifests/mealie-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: food.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: mealie
                port:
                  number: 9000
            path: /
            pathType: Prefix
